refactor: swagger fixes
