# docs/swagger.json
@@ -425,13 +425,28 @@
                 "summary": "Get all movies",
                 "parameters": [
                     {
-                        "description": "Movie filters",
-                        "name": "filters",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.MovieFilters"
-                        }
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "csv",
+                        "name": "genreIds",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "isWatched",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "searchTerm",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "sort",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1434,26 +1449,6 @@
                     "type": "string"
                 },
                 "trailerUrl": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.MovieFilters": {
-            "type": "object",
-            "properties": {
-                "genreIds": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "isWatched": {
-                    "type": "string"
-                },
-                "searchTerm": {
-                    "type": "string"
-                },
-                "sort": {
                     "type": "string"
                 }
             }
